# sqlalchemy-firebird

./: .build.cmd  .gitignore  .pypi_test_upload.cmd  .pypi_upload.cmd  CODE_OF_CONDUCT.md  LICENSE  README.development.md  README.md  README.rst  pyproject.toml  rebuild-test-environment.ps1  requirements.txt  requirements_dev.txt  run-all-fdb.ps1  run-all-firebird.ps1  run-all-tests.ps1  run-all.ps1  run-current-test.ps1  run-test.ps1  run-tests.ps1  setup.cfg  setup.py  tox.ini
.github/workflows/: sqlalchemy-firebird.yml
sqlalchemy-firebird/: __init__.py
sqlalchemy_firebird/: README.dev_notes.rst  __init__.py  base.py  fb_info25.py  fb_info30.py  fb_info40.py  fdb.py  fdb3.py  firebird.py  infrastructure.py  kinterbasdb.py  provision.py  requirements.py  types.py
test/: conftest.py  test_compiler.py  test_dialect.py  test_domain_reflection.py  test_fb_argument.py  test_fb_compile.py  test_fb_misc.py  test_fb_types.py  test_query.py  test_reflection.py  test_suite.py  test_types.py
