[tool.pytest.ini_options]
addopts = "--tb native -v -r fxX --maxfail=100 -p no:warnings --log-info=sqlalchemy.engine "

markers = [
    "backend: mark test as for the backend",
    "hanging: tests hanging during a full test suite run",
]

python_files = "test/*test_*.py"

# SQLAlchemy-Firebird configuration for Black.
[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.github
    | \.pytest_cache
    | _venv
)/
'''

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-firebird"
description = "Firebird for SQLAlchemy"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
keywords = ["SQLAlchemy", "Firebird", "fdb", "firebird-driver"]
license = {file = "LICENSE"}
authors = [
    {name = "Gord Thompson", email="gord@gordthompson.com"},
    {name = "F.D.Castel"},
    {name = "Paul Graves-DesLauriers", email="paul@dexmicro.com"},
]
maintainers = [
    {name = "Paul Graves-DesLauriers", email="paul@dexmicro.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Front-Ends",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy >= 1.4, < 2.0; python_version < '3.8'",
    "fdb; python_version < '3.8'",
    "SQLAlchemy >= 2.0; python_version >= '3.8'",
    "firebird-driver; python_version >= '3.8'",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "build", "twine"]
test = ["pytest"]

[project.urls]
Documentation = "https://github.com/pauldex/sqlalchemy-firebird/wiki"
Source = "https://github.com/pauldex/sqlalchemy-firebird"
Tracker = "https://github.com/pauldex/sqlalchemy-firebird/issues"

[project.entry-points."sqlalchemy.dialects"]
"firebird" = "sqlalchemy_firebird.firebird:FBDialect_firebird"
"firebird.fdb" = "sqlalchemy_firebird.fdb:FBDialect_fdb"
"firebird.firebird" = "sqlalchemy_firebird.firebird:FBDialect_firebird"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"], content-type = "text/x-rst"}
version = {attr = "sqlalchemy_firebird.__version__"}
