[metadata]
license_file = LICENSE

[sqla_testing]
requirement_cls=sqlalchemy_firebird.requirements:Requirements
profile_file=test/profiles.txt

[options.entry_points]
sqlalchemy.dialects =
    firebird = sqlalchemy_firebird.firebird:FBDialect_firebird
    firebird.fdb = sqlalchemy_firebird.fdb:FBDialect_fdb
    firebird.firebird = sqlalchemy_firebird.firebird:FBDialect_firebird

