[metadata]
license_file = LICENSE

[sqla_testing]
requirement_cls=sqlalchemy_firebird.requirements:Requirements
profile_file=test/profiles.txt

;[db]
;default=firebird://user:password@host:port/path/to/db[?charset=UTF8&key=value&key=value...]
;embedded=firebird://path/to/db[?charset=UTF8&fb_library_name=/full_path_to/database_dll_or_so&key=value&key=value...]

