[metadata]
license_file = LICENSE

[sqla_testing]
requirement_cls=sqlalchemy_firebird.requirements:Requirements
profile_file=test/profiles.txt

[options.entry_points]
sqlalchemy.dialects =
    firebird = sqlalchemy_firebird.fdb:FBDialect_fdb
    firebird.fdb = sqlalchemy_firebird.fdb:FBDialect_fdb

;[db]
;default=firebird://user:password@host:port/path/to/db[?charset=UTF8&key=value&key=value...]
;embedded=firebird://path/to/db[?charset=UTF8&fb_library_name=/full_path_to/database_dll_or_so&key=value&key=value...]

